# homeagent

./: .coverage  .dockerignore  .env-example  .gitignore  APPLICATION.md  Dockerfile.agent  README.md  docker-compose.yml  pyproject.toml
.agent/skills/debugging-decisions/: SKILL.md
.agent/skills/identifying-leverage/: SKILL.md
.agent/skills/incremental-delivery/: SKILL.md
.agent/skills/technical-strategy/: SKILL.md
.agent/workflows/: interview_company_context.md  interview_operational_context.md
.agents/: uv_commands.json
data/agents/Coordinator/: PERSONALITY.md  metadata.json
data/agents/Creator/: PERSONALITY.md  PERSONALITY_TEMPLATE.md  metadata.json
data/agents/Judge/: PERSONALITY.md  metadata.json
data/ngircd/: ngircd.conf
data/shared/: Dockerfile  prometheus_anomaly.py
data/thelounge/: config.js  vapid.json
src/core/: agent.py  agent_loader.py  agent_loop.py  config.py  irc_bridge.py  knowledge.py  llm.py  logger.py  memory.py  storage.py
src/tools/: base.py  creator_tools.py  http_request.py  personality_tool.py  python_eval.py  scheduler.py  web_search.py
tests/: conftest.py  reproduce_fallback.py  test_agent.py  test_agent_loader.py  test_agent_loop.py  test_agent_scheduler_integration.py  test_knowledge.py  test_llm.py  test_memory.py  test_scheduler.py  test_scheduler_execution.py  test_storage.py
